force-app/main/default/objects/Viagem__c/Viagem__c.object-meta.xml
<CustomObject>
    <label>Viagem</label>
    <nameField>
        <displayFormat>V-{000000000}</displayFormat>
        <label>Número da Viagem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viagens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>