force-app/main/default/objects/Viagem__c/fields/Companhia__c.field-meta.xml
<CustomField>
    <fullName>Companhia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Companhia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Companhia</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Viagens</relationshipLabel>
    <relationshipName>Viagens</relationshipName>
    <type>Lookup</type>
</CustomField>