force-app/main/default/objects/Viagem__c/fields/Custo__c.field-meta.xml
<CustomField>
    <fullName>Custo__c</fullName>
    <inlineHelpText>Custo em reais da viagem da ida/volta.</inlineHelpText>
    <label>Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>