force-app/main/default/objects/Viagem__c/fields/Data_Hora_da_Ida__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_da_Ida__c</fullName>
    <label>Data/Hora da Ida</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>