force-app/main/default/objects/Viagem__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <label>Cidade de Destino</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>