force-app/main/default/objects/Viagem__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Cidade de Origem</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>