force-app/main/default/objects/Viagem__c/fields/Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Pagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagamento</label>
    <referenceTo>Pagamento__c</referenceTo>
    <relationshipLabel>Viagens</relationshipLabel>
    <relationshipName>Viagens</relationshipName>
    <type>Lookup</type>
</CustomField>