force-app/main/default/objects/Viagem__c/fields/Pago_pela_empresa__c.field-meta.xml
<CustomField>
    <fullName>Pago_pela_empresa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago pela empresa</label>
    <type>Checkbox</type>
</CustomField>