force-app/main/default/objects/Viagem__c/validationRules/CriarViagemSemClienteAtivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CriarViagemSemClienteAtivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   NOT(ISPICKVAL(Cliente__r.Status__c, &quot;Ativo&quot;))  
)</errorConditionFormula>
    <errorMessage>Não é possível criar esse registro com cliente que não é ativo.</errorMessage>
</ValidationRule>