force-app/main/default/objects/Viagem__c/validationRules/CriarViagemSemLimiteDisponivel.validationRule-meta.xml
<ValidationRule>
    <fullName>CriarViagemSemLimiteDisponivel</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   ISNEW(),
   Cliente__r.Limite_de_Credito_Disponivel__c == 0
)</errorConditionFormula>
    <errorMessage>Não é permitido criar esse registro pois esse cliente não tem mais limite de crédito disponível.</errorMessage>
</ValidationRule>