force-app/main/default/objects/Viagem__c/validationRules/DataDaVoltaMenorQueAIda.validationRule-meta.xml
<ValidationRule>
    <fullName>DataDaVoltaMenorQueAIda</fullName>
    <active>false</active>
    <errorConditionFormula>Data_Hora_da_Volta__c &lt;  Data_Hora_da_Ida__c</errorConditionFormula>
    <errorMessage>A data da volta não pode ser menor que a data da ida.</errorMessage>
</ValidationRule>