force-app/main/default/objects/Viagem__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Colaborador__c</columns>
    <columns>Data_Hora_da_Ida__c</columns>
    <columns>Data_Hora_da_Volta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>