force-app/main/default/objects/Viagem__c/listViews/Todas_as_viagens.listView-meta.xml
<ListView>
    <fullName>Todas_as_viagens</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Data_Hora_da_Ida__c</columns>
    <columns>Data_Hora_da_Volta__c</columns>
    <columns>Pago_pela_empresa__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todas as viagens</label>
</ListView>